fix: finetune group selection on smaller resolution

--- a/client/src/css/main.css
+++ b/client/src/css/main.css
@@ -148,7 +148,7 @@ dl.menu dd.right {
 }
 dl.menu dd a {
 	display: block;
-	padding: 0.4em 1.2em;
+	padding: 0.4em 1.1em;
 	text-decoration: none;
 	color: black;
 }
